--- a/WalletWasabi.Fluent/WalletWasabi.Fluent.csproj
+++ b/WalletWasabi.Fluent/WalletWasabi.Fluent.csproj
@@ -24,6 +24,7 @@
 		<PackageReference Include="Avalonia.Xaml.Behaviors" Version="0.10.6.10" />
 	</ItemGroup>
 	<ItemGroup>
+		<ProjectReference Include="..\..\TemplatedDataGrid\src\TemplatedDataGrid\TemplatedDataGrid.csproj" />
 		<ProjectReference Include="..\WalletWasabi.Gui\WalletWasabi.Gui.csproj" />
 		<ProjectReference Include="..\WalletWasabi\WalletWasabi.csproj" />
 		<ProjectReference Include="..\WalletWasabi.Fluent.Generators\WalletWasabi.Fluent.Generators.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
